# Face_recognition

./: CMakeLists.txt  FaceRecognitionTest.pro  _Image.cpp  _Image.h  all_libraries.h  histogram_method.cpp  histogrammethod.cpp  histogrammethod.h  histogrammethod.ui  lbph_method.cpp  lbph_method.h  lbphmethod.cpp  lbphmethod.h  lbphmethod.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  random_pixels_method.cpp  random_pixels_method.h  randommethod.cpp  randommethod.h  randommethod.ui  recognition_call.cpp  recognition_call.h  scaling_method.cpp  scalingmethod.cpp  scalingmethod.h  scalingmethod.ui  voting_method.cpp  voting_method.h  votingmethod.cpp  votingmethod.h  votingmethod.ui
FaceRecognitionTest/: _Image.cpp  _Image.h  all_libraries.h  histogram_method.cpp  histogram_method.h  lbph_method.cpp  lbph_method.h  main.cpp  random_pixels_method.cpp  random_pixels_method.h  recognition_call.cpp  recognition_call.h  scaling_method.cpp  scaling_method.h  test_method.cpp  test_method.h  voting_method.cpp  voting_method.h
